## 0.3.0 / ...

  * BUG: The Age response header was not being set properly when a stale
    entry was validated. This would result in Age values that exceeded
    the freshness lifetime in responses.
  * BUG: A cached entry in a heap meta store could be unintentionally
    modified by request processing since the cached objects were being
    returned directly. The result was typically missing/incorrect header
    values (e.g., missing Content-Type header). [dkubb]
  * BUG: 304 responses should not include entity headers (especially
    Content-Length). This is causing Safari/WebKit weirdness on 304
    responses.
  * BUG: The If-None-Match header was being ignored, causing the cache
    to send 200 responses to matching conditional GET requests.

## 0.2.0 / 2008-10-24 / Initial Release

  * Document events and transitions in `rack/cache/config/default.rb`
  * Basic logging support (`trace`, `warn`, `info`, `error` from within Context)
  * EntityStore: store entity bodies keyed by SHA
  * MetaStore: store response headers keyed by URL
  * Last-Modified/ETag validation
  * Vary support
  * Implement error! transition
  * New Rack::Cache::Core
  * memcached meta and entity store implementations
  * URI based storage configuration
  * Read options from Rack env if present (rack-cache.XXX keys)
  * `object` is now `entry`
  * Documentation framework and website
  * Document storage areas and implementations
  * Document configuration/events

## 0.1.0 / 2008-07-21 / Proof of concept (unreleased)

  * Basic core with event support
  * `#import` method for bringing in config files
  * Freshness based expiration
  * RFC 2616 If-Modified-Since based validation
  * A horribly shitty storage back-end (Hash in mem)
  * Don't cache hop-by-hop headers: Connection, Keep-Alive, Proxy-Authenticate,
    Proxy-Authorization, TE, Trailers, Transfer-Encoding, Upgrade